@@ -202,6 +202,9 @@ Core and Builtins
 Library
 -------
 
+- Issue 2625: added missing iteritems() call to the for loop in
+  mailbox.MH.get_message().
+
 - Issue 5585: Add the ability to call an initializer to mulitiprocessing.manager
   so that users can install custonm handlers/etc.
 
